# PrimeClock

./: .gitignore  BUNDLE_FILE_MANIFEST.txt  CITATION.cff  DATA_FILES.md  ERRATA.md  LICENSE  README.md  RELEASE_NOTES_v2_1_1.md  RELEASE_NOTES_v2_2.md  RELEASE_NOTES_v2_2_1.md  RELEASE_NOTES_v2_2_2.md  RELEASE_NOTES_v2_2_3.md  RELEASE_NOTES_v2_2_4.md  RELEASE_NOTES_v2_3_0.md  SHA256SUMS  THEOREM_NOTE.md  VERIFY.md  VERSION_MAP.md  index.html  package-lock.json  package.json
research/: .gitignore  PUBLIC_ARTIFACTS.md  PUBLIC_RELEASE_MANIFEST.md  README.md  RELEASE_NOTES_v2_0.md  RELEASE_NOTES_v2_1.md  RELEASE_NOTES_v2_2.md  RELEASE_NOTES_v2_2_1.md  RELEASE_NOTES_v2_2_2.md  RELEASE_NOTES_v2_2_3.md  RELEASE_NOTES_v2_2_4.md  RELEASE_NOTES_v2_3_0.md  VERIFY_FINITE_C4_B5.md  pyproject.toml
research/certificates/: check_prime_prefix_c4_b5.py
research/data/: .gitignore
research/notebooks/: 00_smoke.ipynb  01_distribution.ipynb  02_branch_decomposition.ipynb  03_fourier.ipynb
research/notes/: claims.md  claims_finite_c4_b5.md  counterexamples.md  covering.md  definitions.md  experiments.md  finite-n-pnt-model.md  fourier.md  known-results.md  prc_broad_cluster_scan.md  prc_c0_transition_dynamics_v0_1.md  prc_candidate_windows.md  prc_cluster_density.md  prc_consecutive_runs.md  prc_fast_scan.md  prc_finite_certificate_note_v2_0.md  prc_main_roadmap.md  prc_main_v0_3.md  prc_main_v0_4.md  prc_main_v0_5.md  prc_main_v0_6.md  prc_main_v0_7.md  prc_main_v0_8.md  prc_main_v0_9.md  prc_mathematical_theme_prime_prefix_filtration_v0_1.md  prc_prefilter_guarantee.md  prc_prime_prefix_certificate_depth_v0_2.md  prc_prime_prefix_finite_note_v1_1.md  prc_prime_prefix_k8_extension_v0_3.md  prc_prime_prefix_mod210_anchor_neighborhood_v0_12.md  prc_prime_prefix_profile_v0_1.md  prc_prime_prefix_uncertified_control_audit_v0_6.md  prc_research_note_v1_0_ja.md  (+16 more)
(+418 files in other folders)
