[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prime-reciprocal-projection"
version = "0.1.0"
description = "Reproducible experiments for Prime Reciprocal Projection."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyyaml>=6.0",
  "ruff>=0.6",
  "nbclient>=0.10",
  "nbformat>=5.10",
]
notebook = [
  "jupyterlab>=4.0",
]

[project.scripts]
prp = "prime_reciprocal_projection.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "slow: long-running v2.3 candidate verification, including helper regeneration and ZIP self-contained checks",
  "bundle: candidate package build, check, and ZIP verification",
]

[tool.ruff]
line-length = 100
target-version = "py39"
